examples/helix-basic-tds-consolidated/k8s/cd.yaml
apiVersion: v1
kind: Service
metadata:
  name: cd
spec:
  selector:
    app: cd
  ports:
  - protocol: TCP
    port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cd-deployment
  labels:
    app: cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cd
  template:
    metadata:
      labels:
        app: cd
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: helix-cd
        image: devexcontainers.azurecr.io/helix-cd
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz/ready
            port: 80
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Liveness
          timeoutSeconds: 30
          periodSeconds: 30
          failureThreshold: 3
        startupProbe:
          httpGet:
            path: /healthz/ready
            port: 80
            httpHeaders:
            - name: X-Kubernetes-Probe
              value: Startup
          timeoutSeconds: 30
          periodSeconds: 30
          failureThreshold: 10
      imagePullSecrets:
      - name: devexregistry
