examples/helix-basic-tds-consolidated/k8s/mssql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mssql
spec:
  selector:
    app: mssql
  ports:
  - protocol: TCP
    port: 1433
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
  labels:
    app: mssql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: helix-mssql
        image: devexcontainers.azurecr.io/helix-mssql
        ports:
        - containerPort: 1433
      imagePullSecrets:
      - name: devexregistry
