examples/helix-basic-tds-consolidated/k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: sitecore-redis
        image: devexcontainers.azurecr.io/helix-redis
        ports:
        - containerPort: 6379
      imagePullSecrets:
      - name: devexregistry
