examples/helix-basic-tds-consolidated/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sitecore-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: basic-company
    http:
      paths:
      - path: /
        backend:
          serviceName: cd
          servicePort: 80
  - host: cm.helix.aks
    http:
      paths:
      - path: /
        backend:
          serviceName: cm
          servicePort: 80
  - host: id.helix.aks
    http:
      paths:
      - path: /
        backend:
          serviceName: id
          servicePort: 80
